# Content-Creation-Automation

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  ISSUES_REVIEW.md  Makefile  README.md  SECURITY.md  TASK_SPEC.md  WORK_QUEUE.md  agent_flow.md  content-factory-implementation-plan.md  fixer.md  pyproject.toml  run-tasks.sh  testing pipeline.md
.antigravity/: settings.json
.antigravitycli/: 8dcf1d7a-51ee-450d-bc31-99fafe31006f.json
config/: feeds.yaml  publishing.yaml  scoring.yaml
docs/: branching-strategy.md  creator_os_architecture.md  phase-12.2-review-status-label-cleanup.md  phase-12.2-scoring-diagnostics.md  phase-12.2-script-token-cleanup.md  phase-12.2-terminal-state-message-cleanup.md  phase-12.2-thumbnail-placeholder-cleanup.md  phase-12.2-timestamp-display-cleanup.md  phase-12.2-validation-sweep.md  phase-12.3-platform-contracts.md  project-context.md  prompting-rules.md  schema.md  voice-and-style.md
prompts/: carousel.md  content_intelligence.md  linkedin_post.md  newsletter.md  short_video.md  storyboard.md  summarize.md  thumbnail.md
scratch/: run_pipeline_all.py
scripts/: create_issues_api.py  issue-runner.sh  issue_pr_body.py  issue_runner.py  issue_scope_guard.py
tests/: __init__.py  test_analytics.py  test_application_context.py  test_asset_generation_service.py  test_asset_review_service.py  test_audit.py  test_brief_generation_critical.py  test_brief_generation_service.py  test_carousel_storyboard_integration.py  test_cli.py  test_collect_topics_service.py  test_content_intelligence.py  (+44 more)
(+1117 files in other folders)
